feat: Implementación backend con CRUD de IA